devel
-----

* Deprecate option `--rocksdb.exclusive-writes`, which was meant to serve
  only as a stopgap measure while porting applications from the MMFiles
  storage engine to RocksDB.

* Added startup option `--query.allow-collections-in-expressions` to control
  whether collection names can be used in arbitrary places in AQL expressions,
  e.g. `collection + 1`. This was allowed before, as a collection can be seen
  as an array of documents. However, referring to a collection like this in a
  query would materialize all the collection's documents in RAM, making such
  constructs prohibitively expensive for medium-size to large-size collections.

  The option can now be set to `false` to prohibit accidental usage of 
  collection names in AQL expressions. With that setting, using a collection
  inside an arbitrary expression will trigger the error `collection used as 
  expression operand` and make the query fail.
  Even with the option being set to `false`, it is still possible to use 
  collection names in AQL queries where they are expected, e.g. `FOR doc IN 
  collection RETURN doc`.

* Remove obsolete API endpoint /_admin/repair/distributeShardsLike`. This
  API was intended to correct some bad state introduced before 3.2.12 or 3.3.4,
  respectively. It had to be invoked manually by callers and there was never
  any driver support for it.

* Remove now-unused SubqueryExecutor. This is an internal change only and
  should not have any effect on queries, as from 3.8 onwards only spliced
  subqueries should be used in query execution plans and during query
  execution.

* Remove CMake control variable `UNCONDITIONALLY_BUILD_LOG_MESSAGES`.
  Now, any maintainer mode build will build all log messages automatically,
  so we will have full coverage of log message construction during our
  tests. In non-maintainer mode, log messages are still only built when
  actually required. This simplifies the build and increases coverage.
