@@ -1,6 +1,12 @@
 devel
 -----
 
+* Fix logging of urls when using `--log.level requests=debug`. There was an
+  issue since v3.7.7 with the wrong URL being logged in request logging if
+  multiple requests were sent over the same connection. In this case, the
+  request logging only reported the first URL requested in the connection,
+  even for all subsequent requests.
+
 * Deprecate option `--rocksdb.exclusive-writes`, which was meant to serve
   only as a stopgap measure while porting applications from the MMFiles
   storage engine to RocksDB.
